# OnionC2

./: .gitignore  LICENSE  readme.md  release-notes.md
agent/: Cargo.toml  build.sh
agent/src/: config.rs  debug.rs  exc.rs  helpers.rs  main.rs  mutex.rs  win_persist.rs
api/: go.mod  go.sum  main.go
api/config/: env.go
api/core/: helpers.go
api/core/crypto/: auth.go  auth_test.go  crypto.go  crypto_test.go  words.go
api/ctrl/apictrl/: agent.go  agents.go  auth.go  auth_test.go  channel-messages.go  channels.go  files.go  geoip.go  messages.go  operators.go  permissions.go  stats.go
api/ctrl/c2ctrl/: agent.go  files.go  files_test.go  messages.go
api/db/: database.go
api/geoip/: geoip.go
api/middleware/: cors.go
api/models/: agent.go  channel-message.go  channel-secret.go  channel.go  files.go  message.go  operator.go  permission.go
api/repos/: repos.go
api/repos/agentsRepo/: db.go
api/repos/channelMessagesRepo/: db.go
api/repos/channelSecretsRepo/: db.go
api/repos/channelsRepo/: db.go
api/repos/filesRepo/: db.go
api/repos/messagesRepo/: db.go
docs/: 0-introduction.md  1-setup.md  2-commands.md
ui/: app.vue  nuxt.config.ts  package-lock.json  package.json  serve.go  tsconfig.json
ui/components/: Chat.vue  ControlAgentDialog.vue  FileExplorerAgentDialog.vue  FileSearchDialog.vue  InfoCharts.vue  Map.vue  MapSvg.vue  UnknownOriginStats.vue
ui/composables/: api.ts
ui/layouts/: default.vue
ui/page/: Agents.vue  index.vue
ui/pages/: Agents.vue  Files.vue  Settings.vue  index.vue
ui/server/: tsconfig.json
(+2 files in other folders)
