[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
arti-client = { version = "0.23.0", features = ["onion-service-client"]}
tokio = { version = "1", features = ["full"]}
gethostname = "0.5.0"
goldberg = "0.1.0"
serde_json = "1.0.128"
serde = { version = "1.0", features = ["derive"] }
winreg = "0.55.0"
rusqlite = { version = "0.32.1", features = ["bundled"] }
windows = { version = "0.61.1", features = ["Win32_System_Threading", "Win32_Foundation", "Win32_Security", "Win32_UI_Shell", "Win32_System_Com", "Win32_System_Ole", "Win32_System_SystemInformation"] }
systemstat = "0.2.4"

[profile.release]
opt-level = "z"
lto = true
strip = true
panic = "abort"
